small multi match fixes